<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Facelift</string>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="progress">0/33</string>
    <string name="start">Start</string>
    <string name="time">00:00</string>
    <string name="highscore_time">03:27</string>
    <string name="username">Cisco username</string>
    <string name="debug">debug</string>
    <string name="your_score">Your score</string>
    <string name="tmp_name">Tore</string>
    <string name="tmp_score">03:32</string>
    <string name="temp_position">1.</string>
    <string name="go_back">Go back</string>

</resources>
