<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgray"
    >

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/lightgray"
        android:textSize="22sp"
        android:text="@string/your_score"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/your_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:textSize="100sp"
        android:text="@string/highscore_time"
        />

    <EditText
        android:id="@+id/your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/lightgray"
        android:textSize="25sp"
        android:padding="20dp"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:gravity="center"
        android:background="#0000"
        android:imeOptions="flagNoExtractUi|actionDone"
        android:hint="@string/username"
        android:visibility="visible"
        />

    <ListView
            android:id="@+id/highscore_list"
            android:layout_width="600dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_below="@id/your_score"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            >
            </ListView>
    
    <TextView
            android:id="@+id/go_back_button"
            android:layout_width="111dp"
            android:layout_height="111dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="50dp"
            android:background="@drawable/circle_small_yellow"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/go_back"

            />

</RelativeLayout>